# peek

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  about.html  overlay.html  package-lock.json  package.json  setup.html  tailwind.config.ts  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ha.rs  lib.rs
src/about/: main.ts
src/components/ui/: button.tsx
src/lib/: tauri.ts
src/overlay/: Overlay.tsx  main.tsx
src/setup/: Setup.tsx  main.tsx
